HAP-870 fixed change grid word wrap

--- a/softWrench.sW4.Web/Content/styles/hapag/grid.css
+++ b/softWrench.sW4.Web/Content/styles/hapag/grid.css
@@ -11,6 +11,15 @@
             top: 114px;
         }
 
+    #listgrid th {
+        word-break: break-word;
+    }
+
+    #listgrid td {
+        word-break: break-all;
+        word-break: break-word;
+    }
+
 .gridcolumnvalue {
     color: black;
     padding-left: 8px;
